# CPS

./: ProgettoCPS.db  ProgettoCPS.sqlite  README.md  Relazione.ipynb  case_study_function.py  database.py  example.py  graphs.py  linear_interpolation.py  main.py  pyproject.toml  retrieve_data.py
csv/: media-mobile-DBKAC.csv
json/: categories-0.json  observations-DBKAC.json  observations-IPURN623110W010000000.json  observations-IPURN624410L010000000.json  observations-IPURN6244W010000000.json
src/fred_cps/: api.py  database.py  graphs.py  model.py
src/fred_cps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fred_cps/utils/: constants.py  json_file.py
tests/: ProgettoCPS.db  ProgettoCPS.sqlite  case_study_test.py  db_test.py
tests/csv/: media-mobile-DIMSCTPIMEPS.csv  media-mobile-MNINEIPIMEPS.csv  media-mobile-PHMEPRPIHCSA.csv
tests/json/: categories-2.json  categories-33967.json  observations-DIMSCTPIMEPS.json  observations-MNINEIPIMEPS.json  observations-PHMEPRPIHCSA.json
utils/: constants.py  json_file.py
