[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fred_cps"
version = "0.0.7"
authors = [
  { name="Melissa Petrolo", email="emelis.ptr@gmail.com" },
]
description = "project with FRED API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

